fix bug in bower.json

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     ".gitignore",
     ".jshintrc",
     "Gruntfile.js",
-    "package.json",
+    "package.json"
   ],
   "description": "Bluemix Style",
   "main": "scss/main.scss",
